Changes
=======

0.3.0 (unreleased)
------------------

 * Save GUI window size, position and maximized state.
 * Drop python-xdg dependency and use glib functions instead.

0.2.1 (2010-02-25)
------------------

 * Disable play button in GUI when playlist is empty.
 * When playing, automatically set first track to current if it's unset.
 * Don't play last track if current is unset, do nothing instead.
 * Misc code fixes.

0.2.0 (2010-02-23)
------------------

 * Use "audio-volume-high" icon for window and launcher for now.
 * Add simple tags support.
    - Changed the signature of list method: now it returns array
      of (uri, tag_dict) tuples.
    - Added the tag_changed(uri, tag_dict) signal. It is fired when
      player receives new tag information about some uri.
    - The added(tracks, position) signal now had different first parameter
      type: instead of array of uris, it's now an array of (uri, tag_dict)
      tuples, like in the "list" method.
    - Display tags in GUI.
 * The "add" method doesn't support -1 position anymore, use playlist length
   instead (so it added before inexistant after-last element, just like
   in python lists).
 * Rename DBus exception names. Note, that the API is considered unstable before
   version 1.0, so I can do whatever I want, hahaha :-)
 * Add playlist row tooltip showing path to a file.
 * Support removing tracks from playlist using Delete key.
 * Fix a bug with wrong "current track" after reordering.
 * Misc code and GUI fixes.

0.1.0 (2010-02-22)
------------------

Initial release. Provided features:

 * Playlist management including adding, removing, clearing, reordering
   and automatic save in user's XDG data directory.
 * Play control including temporary pausing and full stopping.
 * Changing of currently playing track using next/previous methods,
   explicit playlist position selection and automatically playing next
   track when current finishes.
 * Automatic service termination if unused for 5 seconds.